# athena

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  module.nix  start-postgres.sh
.github/workflows/: build_nix.yml
nix/: dev.nix  module.nix  package.nix
src/: dice.rs  errors.rs  main.rs  quake.rs  reminders.rs
