[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
iso8601-timestamp = "0.3.3"
poise = "0.6.1"
reqwest = { version = "0.12.12", features = ["gzip", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
