[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
iso8601-timestamp = "0.3.3"
poise = "0.6.1"
reqwest = { version = "0.12.12", features = ["gzip", "json"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
